potool (0.14-1) unstable; urgency=low

  * New version
    - documents the fact that text gets reformatted. Closes: #602884
    - adds support for "previous" strings. Closes: #641949
    - uses a more sane error handling function, which does not dump core.
      Closes: #567940
    - directly handles sensible-editor in poedit, making the debian change
      obsolete

 -- Marcin Owsiany <porridge@debian.org>  Tue, 14 Aug 2012 21:09:21 +0200

potool (0.12-1) unstable; urgency=low

  * New version.
    - Use the (correct) implicit rule to link potool. Fixes ubuntu bug 771140.
  * Ignore debhelper logfile.

 -- Marcin Owsiany <porridge@debian.org>  Tue, 14 Jun 2011 08:41:17 +0200

potool (0.11-2) unstable; urgency=high

  * Update Polish manpage path in update-alternatives invocation. The wrong
    path (apart from making the Polish manpage version unavailable via 'poedit'
    name) caused postinst failures with lenny's dpkg version, which made it a
    grave bug. Closes: #597321

 -- Marcin Owsiany <porridge@debian.org>  Sat, 18 Sep 2010 18:14:37 +0100

potool (0.11-1) unstable; urgency=medium

  * New version. Upstream and Debian are now maintained in the same Git
    repository.
  * Includes a patch to poedit from Jakub Wilk for tempfile naming and
    cleanup. Closes: #533833, #533835
  * Includes changes to check return codes/values from calls which can write
    to the filesystem. Closes: #546811
  * Includes some manpage undefined macro cleanups.
  * Policy version update:
     - use filter function to parse DEB_BUILD_OPTIONS (elements are now
       whitespace-separated)
     - run the test suite after building
     - change the localized manpages path to not include country and encoding
     - do not ignore make clean errors
     - update the homepage URL and move it from the description to the
       dedicated header

 -- Marcin Owsiany <porridge@debian.org>  Fri, 25 Sep 2009 21:47:59 +0100

potool (0.10-1) unstable; urgency=low

  * New upstream version