@@ -1,4 +1,0 @@
-usr/bin/potool
-usr/bin/potooledit
-usr/bin/postats
-usr/bin/change-po-charset
