@@ -1,0 +1,8 @@
+change-po-charset.1
+change-po-charset.*.1
+poedit.1
+poedit.*.1
+postats.1
+postats.*.1
+potool.1
+potool.*.1
